2006-10-15 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b8

 * Fix: Correct wrong filenames in 'Id' Keyword.
   Thanks to floridave.

2006-10-15 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b7

 * Fix: svn properties.

2006-10-15 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b6

 * Fix: Missing , typo in lib/stats.php
   Thanks to Georg Naggies from forums.

 * Fix: Show translated text for the stats-link options in config.

 * Indenting in stats includes and lib.

2006-10-14 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b5

 * Change: Partly #1410186
   Renamed "rename album" to "Change foldername" as user got confused.
   Also removed this from startpage.
  
2006-10-14 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b4

 * CHANGE/NEW: #1543131

   The Subalbum tree in the classic theme is now a collapsable fading tree.
   Done via Yahoo! UI treeview.

   Modified printChildren()

2006-10-14 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b3

 * Fix: After the first succesfull install there is no $inst_type 
	in the config session.

2006-10-14 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b2

 * Fix: Missing $ in welcome.inc prevented showin an info message.

 * Fix: Check for multiple (not HTML compliant) IDs in gSubmit

2006-10-13 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b1

 * Added "featured photo block" from Beckett Madden-Woods.
   
   Splitted it into 2 files and made the frame configurable
   via config wizard.

   Config Version bump.

2006-10-12 Chris Kelly <ckdake@ckdake.com> 1.6-alpha1

 * Release: 1.6-alpha1

2006-10-12 Jens Tkotz <jens@peino.de> 1.6-svn-b27

 * Fix: Added two checks for existing $gallery.
	This causes to stop Gallery on the very first install.

2006-10-12 Jens Tkotz <jens@peino.de> 1.6-svn-b26

 * Fix: phpBB2 fixes. (Thanks to h0bbel)
    - Moving first HTML Output in albums view below the header

    - Rename $theme in albums.php to $g_theme to avoid conflict.

    - Added closing div and debug info into footer as phpBB2 exists earlier.
